fix
 navbar's position(no scrollbar )+ placed style values to customized css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.navbar{
+    height: 85px;
+}
+.container-fluid>img{
+    height: 60px; 
+    aspect-ratio: 1  /1;
+}
+
 .form-control::placeholder { 
     color: rgb(126, 122, 122);
 }
